[package]
name = "haruhi_macro"
version = "0.1.0"
authors = ["Max Naumchyk <max.naumch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0"

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro-error = "0.4"
regex = "1.3"
